--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.1.1",
+    "@nestjs/mongoose": "^10.0.6",
     "@nestjs/platform-express": "^10.0.0",
     "apollo-server-express": "^3.13.0",
     "graphql": "^16.8.1",
+    "mongoose": "^8.4.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
