--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/mongoose": "^10.0.6",
     "@nestjs/platform-express": "^10.0.0",
     "apollo-server-express": "^3.13.0",
+    "date-fns": "^3.6.0",
     "graphql": "^16.8.1",
     "mongoose": "^8.4.1",
     "reflect-metadata": "^0.2.0",
